--- a/exo3/deployment.yaml
+++ b/exo3/deployment.yaml
@@ -21,3 +21,7 @@ spec:
         image: harbor.kakor.ovh/public/nginx
         ports:
         - containerPort: 80
+        resources:
+          limits:
+            memory: "50Gi"
+            cpu: "800m"
